--- a/src/routes/piano/style.css
+++ b/src/routes/piano/style.css
@@ -9,6 +9,10 @@
 }
 
 .tut{
-	height: 200px;
-	width: 50px;
+	height: 150px;
+	width: 100px;
+	border-left: 1px solid black;
+	
+	border-top: 0px;
+	border-bottom: 0px;
 }
